# python-devops-bootcamp-2019

./: .gitignore  README.md  README.rst  setup.cfg  tox.ini
docs/source/: conf.py  index.rst  utils.rst
src/booty/: cli.py  utils.py
tests/: test_booty.py
