##########################
# Setup.py Configuration #
##########################
[metadata]
name = booty
version = 0.0.3-dev
description = This package gets da booty
long_description = file: README.rst

url = https://github.com/cthoyt/python-devops-bootcamp-2019

license = MIT License

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de

classifiers =
    Development Status :: 4 - Beta
	Environment :: Console
    Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
	Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
keywords =
    Booty
    Boats
    Unix stuff

[options]
# Where is my code
packages = find:
package_dir =
    = src

install_requires =
    click

zip_safe = false
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    booty = booty.cli:main
